@@ -24,6 +24,7 @@
     [> API changes/Deprecation
 	--------------------------
 	- Fully deprecate SoCSDRAM/SPIFlash core (replaced by LiteSPI).
+	- UART "bridge" name deprecated in favor of "crossover" (already supported).
 
 [> 2021.12, released on January 5th 2022
 ----------------------------------------
